AWS SDK for Android 1.3.2